# prmoji

./: .gitignore  Cargo.toml  Dockerfile  build.sbt  readme.md  server.js
.github/workflows/: docker-publish.yml  scala.yml
config/: default.toml
deploy/: deployment.yaml  postgres.yaml  service.yaml
gh-jsons/: approved.json  merge.json
migrations/: 0001_create_pr_table.sql
src/: app_state.rs  auth.rs  clock.rs  config.rs  database.rs  github.rs  handlers.rs  main.rs  models.rs  slack.rs  url_extractor.rs
src/api/: auth.rs  mod.rs  models.rs
src/main/scala/: Main.scala
src/main/scala/com/prezi/prmoji/codecs/: ValueType.scala
src/main/scala/com/prezi/prmoji/models/: Emoji.scala  GithubAction.scala  GithubEvent.scala  PullRequest.scala  User.scala
src/main/scala/com/prezi/prmoji/persistence/: MockPRMessageRepository.scala  PRMessage.scala  SlickPRMessageRepository.scala
src/main/scala/com/prezi/prmoji/persistence/interop/: DatabaseProvider.scala  ZIOCompanionSyntax.scala
src/main/scala/com/prezi/prmoji/persistence/prmessage/: MockPRMessageRepository.scala  PRMessage.scala  PRMessageRepository.scala  PRMessageTable.scala  SlickPRMessageRepository.scala
src/main/scala/com/prezi/prmoji/services/api/: API.scala  FinalizedAPI.scala
src/main/scala/com/prezi/prmoji/services/slack/: ProductionSlackClient.scala  Slack.scala  ZHttpSlackClient.scala
src/persistence/: mod.rs  models.rs  pr_repository.rs
src/slack/: mod.rs  models.rs
src/test/scala/com/prezi/prmoji/slack/: SlackResponseSpecs.scala
test_resources/: edit.json
test_resources/github/: close.json  comment.json  request-changes.json
test_resources/slack/: create.json  delete.json
(+10 files in other folders)
