[package]
name = "prmoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
consistenttime = "0.2.0"
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["full"] }
once_cell = "1.18.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["uuid", "chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
